--- a/l10n_jp_address_layout/views/res_partner_views.xml
+++ b/l10n_jp_address_layout/views/res_partner_views.xml
@@ -27,4 +27,15 @@
         </field>
     </record>
 
+    <record id="view_partner_form" model="ir.ui.view">
+        <field name="name">view.partner.form</field>
+        <field name="model">res.partner</field>
+        <field name="inherit_id" ref="base.view_partner_form" />
+        <field name="arch" type="xml">
+            <xpath expr="//field[@name='title']" position="attributes">
+                <attribute name="attrs"/>
+            </xpath>
+        </field>
+    </record>
+
 </odoo>
