show title field

--- a/l10n_jp_partner_title_qweb/views/res_partner_views.xml
+++ b/l10n_jp_partner_title_qweb/views/res_partner_views.xml
@@ -9,6 +9,9 @@
             <xpath expr="//field[@name='title']" position="attributes">
                 <attribute name="attrs"/>
             </xpath>
+            <xpath expr="//notebook//form//field[@name='title']" position="attributes">
+                <attribute name="attrs"/>
+            </xpath>
         </field>
     </record>
 
